package ru.mirea.task22;

public class Chair {
    String name;

    public String getName() {
        return name;
    }

    public void setName(String name) {
        this.name = name;
    }

    public void name() {
    }
}
