package ru.mirea.task22;

public enum ChairType {
    VIKTORIAN,
    MULTY,
    MAGIC,
}
