package ru.mirea.task22;

public class Magic extends Chair{
    public void name()
    {
        System.out.println("Волшебный");
    }
}
