package ru.mirea.task22;

public class Multy extends Chair{
    public void name()
    {
        System.out.println("Многофункциональный");
    }
}
